# rero-invenio-files

./: .editorconfig  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  LICENSE  MANIFEST.in  README.rst  babel.ini  pyproject.toml  run-tests.sh  setup.cfg  setup.py
.github/workflows/: pypi-publish.yml  tests.yml
.tx/: config
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  make.bat  usage.rst
rero_invenio_files/: __init__.py  config.py  ext.py  views.py
rero_invenio_files/pdf/: __init__.py
rero_invenio_files/records/: api.py  components.py  models.py  permissions.py  previewer.py  resources.py  schema.py  services.py
rero_invenio_files/records/mappings/v7/: __init__.py
rero_invenio_files/records/mappings/v7/records/: record-v1.0.0.json
tests/: conftest.py  test_pdf_generator.py  test_rero_invenio_files.py
tests/mock_module/: __init__.py  permissions.py  services.py
