[tool.poetry]
name = "rero-invenio-files"
version = "1.0.0"
description = "Files support for the RERO invenio instances."
authors = ["RERO <software@rero.ch>"]
license = "GNU Affero General Public License v3.0"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.9"
invenio-records-resources = "<5.7.0"
invenio-search = {version = ">=2.1.0,<3.0.0", extras = ["elasticsearch7"]}
invenio-db = {version = ">=1.1.0,<1.2.0", extras = ["postgresql"]}
fpdf2 = "^2.7.7"
pymupdf = "^1.23.21"
invenio-previewer = "^2.2.0"
invenio-theme = "<4.0.0"


[tool.poetry.group.dev.dependencies]
invenio-app = ">=1.3.4,<1.4.0"
pytest-invenio = ">=2.1.6,<3.0.0"
pytest-black = ">=0.3.0"
sphinx = ">=4.5.0"
mock = "^5.1.0"
safety = "^3.2.0"
autoflake = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."invenio_base.apps"]
rero-invenio-files = "rero_invenio_files.ext:REROInvenioFiles"

[tool.poetry.plugins."invenio_base.api_apps"]
rero-invenio-files = "rero_invenio_files.ext:REROInvenioFiles"

[tool.poetry.plugins."invenio_base.blueprints"]
rero_invenio_files = "rero_invenio_files.views:blueprint"

[tool.poetry.plugins."invenio_base.api_blueprints"]
rero_invenio_files = "rero_invenio_files.views:blueprint"
rero_invenio_files_records = "rero_invenio_files.views:create_records_blueprint_from_app"
rero_invenio_files_records_files = "rero_invenio_files.views:create_records_files_blueprint_from_app"

[tool.poetry.plugins."invenio_db.models"]
records = "rero_invenio_files.records.models"

[tool.poetry.plugins."invenio_jsonschemas.schemas"]
records = "rero_invenio_files.records.jsonschemas"

[tool.poetry.plugins."invenio_search.mappings"]
records = "rero_invenio_files.records.mappings"

[tool.distutils.bdist_wheel]
universal = true

[tool.pydocstyle]
add_ignore = "D401"

[tool.isort]
profile="black"

[tool.pytest.ini_options]
addopts = "--black --isort --pydocstyle --doctest-glob=\"*.rst\" --doctest-modules --cov=rero_invenio_files --cov-report=term-missing"
testpaths = "docs tests rero_invenio_files"
