# -*- coding: utf-8 -*-
#
# RERO-Invenio-Files
# Copyright (C) 2024 RERO.
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as published by
# the Free Software Foundation, version 3 of the License.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.


[metadata]
name = rero-invenio-files
version = attr: rero_invenio_files.__version__
description = "Files support for the RERO invenio instances."
long_description = file: README.rst, CHANGES.rst
keywords = invenio TODO
license = MIT
author = RERO
author_email = software@rero.ch
platforms = any
url = https://github.com/rero/rero-invenio-files
classifiers =
    Development Status :: 1 - Planning

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    invenio-base>=1.2.5
    invenio-i18n>=1.3.1

[options.extras_require]
tests =
    invenio-app>=1.3.4,<2.0.0
    pytest-invenio>=2.1.0,<3.0.0
    pytest-black>=0.3.0
    sphinx>=4.5.0
# TODO: Check if the module uses search
elasticsearch7 =
    invenio-search[elasticsearch7]>=2.1.0,<3.0.0
opensearch2 =
    invenio-search[opensearch2]>=2.1.0,<3.0.0

[options.entry_points]
invenio_base.apps =
    rero_invenio_files = rero_invenio_files:REROInvenioFiles
invenio_base.blueprints =
    rero_invenio_files = rero_invenio_files.views:blueprint
invenio_i18n.translations =
    messages = rero_invenio_files
# TODO: Edit these entry points to fit your needs.
# invenio_access.actions =
# invenio_admin.actions =
# invenio_assets.bundles =
# invenio_base.api_apps =
# invenio_base.api_blueprints =
# invenio_celery.tasks =
# invenio_db.models =
# invenio_pidstore.minters =
# invenio_records.jsonresolver =

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=rero_invenio_files --cov-report=term-missing
testpaths = docs tests rero_invenio_files

[compile_catalog]
directory = rero_invenio_files/translations/
use-fuzzy = True

[extract_messages]
copyright_holder = RERO
msgid_bugs_address = software@rero.ch
mapping-file = babel.ini
output-file = rero_invenio_files/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = rero_invenio_files/translations/messages.pot
output-dir = rero_invenio_files/translations/

[update_catalog]
input-file = rero_invenio_files/translations/messages.pot
output-dir = rero_invenio_files/translations/
